home-design-change-2

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         <div class="col-lg-5 pb-5" style="min-height: 500px">
           <div class="position-relative h-100 ms-5">
             <img
-              class="position-absolute w-100 h-100 mt-3 ms-n5"
+              class="position-absolute about-img w-100 h-100 mt-3 ms-n5"
               src="img/home/carousel-4.webp"
               style="object-fit: cover"
             />
@@ -697,7 +697,7 @@
       </div>
       <div class="row g-5">
         <div class="col-lg-4 col-md-6">
-          <div class="bg-light">
+          <div class="bg-yellow">
             <img class="img-fluid" src="img/blog/blog-1.webp" style="min-height: 360px;" alt="" />
             <div class="p-4">
               <div class="d-flex justify-content-between mb-4">
@@ -719,7 +719,7 @@
                 </div>
               </div>
               <h4 class="text-uppercase mb-3">
-                Leading construction Company in Kathmandu
+                <span class="text-primary"> Leading construction Company</span> in Kathmandu
               </h4>
               <a class="text-uppercase fw-bold" href=""
                 >Read More <i class="bi bi-arrow-right"></i
@@ -728,7 +728,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
-          <div class="bg-light">
+          <div class="bg-yellow">
             <img class="img-fluid" src="img/blog/blog-5.webp" alt="" />
             <div class="p-4">
               <div class="d-flex justify-content-between mb-4">
@@ -751,7 +751,7 @@
                 </div>
               </div>
               <h4 class="text-uppercase mb-3">
-                Cost of Building a House in Nepal: Budgeting Guidelines
+               <span class="text-primary"> Cost of Building a House in Nepal:</span> Budgeting Guidelines
               </h4>
               <a class="text-uppercase fw-bold" href=""
                 >Read More <i class="bi bi-arrow-right"></i
@@ -760,7 +760,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
-          <div class="bg-light">
+          <div class="bg-yellow">
             <img class="img-fluid" src="img/blog/blog-3.webp" alt="" />
             <div class="p-4">
               <div class="d-flex justify-content-between mb-4">
@@ -782,7 +782,7 @@
                 </div>
               </div>
               <h4 class="text-uppercase mb-3">
-                Build Wise, Build Strong: Why Choose Pillar Construction in Nepal?
+                <span class="text-primary">Build Wise, Build Strong:</span> Why Choose Pillar Construction in Nepal?
               </h4>
               <a class="text-uppercase fw-bold" href=""
                 >Read More <i class="bi bi-arrow-right"></i
