--- a/about.html
+++ b/about.html
@@ -611,7 +611,7 @@
                     class="form-control border-0"
                     placeholder="Your Name"
                     name="Name"
-                    style="height: 55px"
+                    style="height: 55px" required
                   />
                 </div>
                 <div class="col-12 col-sm-6">
@@ -621,7 +621,7 @@
                     class="form-control border-0"
                     placeholder="Your Email"
                     style="height: 55px"
-                    name="Email Address"
+                    name="Email Address" required
                   />
                 </div>
                 <div class="col-12 col-sm-6">
@@ -631,7 +631,7 @@
                     class="form-control border-0"
                     placeholder="Subject"
                     style="height: 55px"
-                    name="Subject"
+                    name="Subject" required
                   />
                 </div>
                 <div class="col-12 col-sm-6">
@@ -641,7 +641,7 @@
                     class="form-control border-0"
                     placeholder="Your Phone Number"
                     style="height: 55px"
-                    name="Phone Number"
+                    name="Phone Number" required
                   />
                 </div>
 
@@ -651,7 +651,7 @@
                     rows="5"
                     id="message"
                     placeholder="Message"
-                    name="Message"
+                    name="Message" required
                   ></textarea>
                 </div>
                 <input
