--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                     class="form-control border-0"
                     placeholder="Your Name"
                     name="Name"
-                    style="height: 55px"
+                    style="height: 55px" required
                   />
                 </div>
                 <div class="col-12 col-sm-6">
@@ -434,7 +434,7 @@
                     class="form-control border-0"
                     placeholder="Your Email"
                     style="height: 55px"
-                    name="Email Address"
+                    name="Email Address" required
                   />
                 </div>
                 <div class="col-12 col-sm-6">
@@ -444,7 +444,7 @@
                     class="form-control border-0"
                     placeholder="Subject"
                     style="height: 55px"
-                    name="Subject"
+                    name="Subject" required
                   />
                 </div>
                 <div class="col-12 col-sm-6">
@@ -454,7 +454,7 @@
                     class="form-control border-0"
                     placeholder="Your Phone Number"
                     style="height: 55px"
-                    name="Phone Number"
+                    name="Phone Number" required
                   />
                 </div>
 
@@ -464,7 +464,7 @@
                     rows="5"
                     id="message"
                     placeholder="Message"
-                    name="Message"
+                    name="Message" required
                   ></textarea>
                 </div>
                 <input
