--- a/service.html
+++ b/service.html
@@ -245,7 +245,7 @@
                     class="form-control border-0"
                     placeholder="Your Name"
                     name="Name"
-                    style="height: 55px"
+                    style="height: 55px" required
                   />
                 </div>
                 <div class="col-12 col-sm-6">
@@ -255,7 +255,7 @@
                     class="form-control border-0"
                     placeholder="Your Email"
                     style="height: 55px"
-                    name="Email Address"
+                    name="Email Address" required
                   />
                 </div>
                 <div class="col-12 col-sm-6">
@@ -265,7 +265,7 @@
                     class="form-control border-0"
                     placeholder="Subject"
                     style="height: 55px"
-                    name="Subject"
+                    name="Subject" required
                   />
                 </div>
                 <div class="col-12 col-sm-6">
@@ -275,7 +275,7 @@
                     class="form-control border-0"
                     placeholder="Your Phone Number"
                     style="height: 55px"
-                    name="Phone Number"
+                    name="Phone Number" required
                   />
                 </div>
 
@@ -285,7 +285,7 @@
                     rows="5"
                     id="message"
                     placeholder="Message"
-                    name="Message"
+                    name="Message" required
                   ></textarea>
                 </div>
                 <input
