--- a/about.html
+++ b/about.html
@@ -204,7 +204,7 @@
                 <img class="position-relative" src="img/team-1.jpg" />
                 <br />
                 <h1 class="display-9 text-uppercase">
-                  Late <span class="text-primary">Yadav Bikram Shah</span>
+                  Late <span class="text-primary">Yadav Kumar Shah</span>
                 </h1>
                 <h3 class="text-body">Founder</h3>
                 
@@ -237,7 +237,7 @@
             </div>
             <div>
               <h3 class="display-7 text-uppercase mb-2">
-                <span class="text-primary">Sangita Shahi</span>
+                <span class="text-primary">Sangita Shah</span>
               </h3>
               <h5 class="text-body">M.D</h5>
             </div>
@@ -252,7 +252,7 @@
             </div>
             <div>
               <h3 class="display-7 text-uppercase mb-2">
-                <span class="text-primary">Sangita Shahi</span>
+                <span class="text-primary">Yogesh Bikram Shah</span>
               </h3>
               <h5 class="text-body">M.D</h5>
             </div>
@@ -493,7 +493,7 @@
     <div class="container-fluid bg-light py-6 px-5">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
         <h1 class="display-5 text-uppercase mb-4">
-          What Our <span class="text-primary">Happy Cleints</span> Say!!!
+          What Our <span class="text-primary">Happy Clients</span> Say!!!
         </h1>
       </div>
       <div class="row gx-0 align-items-center">
