--- a/blog.html
+++ b/blog.html
@@ -123,9 +123,103 @@
             <h1 class="display-5 text-uppercase mb-4">Latest <span class="text-primary">Articles</span> From Our Blog Post</h1>
         </div>
         <div class="row g-5">
+          <div class="col-lg-4 col-md-6">
+            <div class="bg-yellow">
+              <img class="img-fluid" src="img/blog/blog-11.webp"  alt="" />
+              <div class="p-4">
+                <div class="d-flex justify-content-between mb-4">
+                  <div class="d-flex align-items-center">
+                    <img
+                      class="rounded-circle me-2"
+                      src="img/user.jpg"
+                      width="35"
+                      height="35"
+                      alt=""
+                    />
+                    <span>Sabujan Bikram Shah</span>
+                  </div>
+                  <div class="d-flex align-items-center">
+                    <span class="ms-3"
+                      ><i class="far fa-calendar-alt text-primary me-2"></i>11
+                      Sep, 2024</span
+                    >
+                  </div>
+                </div>
+                <h4 class="text-uppercase mb-3">
+                  <span class="text-primary"> Leading construction Company</span> in Kathmandu
+                </h4>
+                <a class="text-uppercase fw-bold" href=""
+                  >Read More <i class="bi bi-arrow-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="bg-yellow">
+              <img class="img-fluid" src="img/blog/blog-5.webp" alt="" />
+              <div class="p-4">
+                <div class="d-flex justify-content-between mb-4">
+                  <div class="d-flex align-items-center">
+                    <img
+                      class="rounded-circle me-2"
+                      src="img/user.jpg"
+                      width="35"
+                      height="35"
+                      alt=""
+                    />
+  
+                    <span>Sabujan Bikram Shah</span>
+                  </div>
+                  <div class="d-flex align-items-center">
+                    <span class="ms-3"
+                      ><i class="far fa-calendar-alt text-primary me-2"></i>11
+                      Sep, 2024</span
+                    >
+                  </div>
+                </div>
+                <h4 class="text-uppercase mb-3">
+                 <span class="text-primary"> Cost of Building a House in Nepal:</span> Budgeting Guidelines
+                </h4>
+                <a class="text-uppercase fw-bold" href=""
+                  >Read More <i class="bi bi-arrow-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="bg-yellow">
+              <img class="img-fluid" src="img/blog/blog-3.webp" alt="" />
+              <div class="p-4">
+                <div class="d-flex justify-content-between mb-4">
+                  <div class="d-flex align-items-center">
+                    <img
+                      class="rounded-circle me-2"
+                      src="img/user.jpg"
+                      width="35"
+                      height="35"
+                      alt=""
+                    />
+                    <span>Sabujan Bikram Shah</span>
+                  </div>
+                  <div class="d-flex align-items-center">
+                    <span class="ms-3"
+                      ><i class="far fa-calendar-alt text-primary me-2"></i>11
+                      Sep, 2024</span
+                    >
+                  </div>
+                </div>
+                <h4 class="text-uppercase mb-3">
+                  <span class="text-primary">Build Wise, Build Strong:</span> Why Choose Pillar Construction in Nepal?
+                </h4>
+                <a class="text-uppercase fw-bold" href=""
+                  >Read More <i class="bi bi-arrow-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
             <div class="col-lg-4 col-md-6">
                 <div class="bg-light">
-                    <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                    <img class="img-fluid" src="img/blog/blog-7.webp" alt="">
                     <div class="p-4">
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
@@ -143,61 +237,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="bg-light">
-                    <img class="img-fluid" src="img/blog-2.jpg" alt="">
-                    <div class="p-4">
-                        <div class="d-flex justify-content-between mb-4">
-                            <div class="d-flex align-items-center">
-                                <img class="rounded-circle me-2" src="img/user.jpg" width="35" height="35" alt="">
-                                <span>Sabujan Bikram Shah</span>
-                            </div>
-                            <div class="d-flex align-items-center">
-                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>01 Jan, 2024</span>
-                            </div>
-                        </div>
-                        <h4 class="text-uppercase mb-3">Rebum diam clita lorem erat magna est erat</h4>
-                        <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="bg-light">
-                    <img class="img-fluid" src="img/blog-3.jpg" alt="">
-                    <div class="p-4">
-                        <div class="d-flex justify-content-between mb-4">
-                            <div class="d-flex align-items-center">
-                                <img class="rounded-circle me-2" src="img/user.jpg" width="35" height="35" alt="">
-                                <span>Sabujan Bikram Shah</span>
-                            </div>
-                            <div class="d-flex align-items-center">
-                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>01 Jan, 2024</span>
-                            </div>
-                        </div>
-                        <h4 class="text-uppercase mb-3">Rebum diam clita lorem erat magna est erat</h4>
-                        <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="bg-light">
-                    <img class="img-fluid" src="img/blog-2.jpg" alt="">
-                    <div class="p-4">
-                        <div class="d-flex justify-content-between mb-4">
-                            <div class="d-flex align-items-center">
-                                <img class="rounded-circle me-2" src="img/user.jpg" width="35" height="35" alt="">
-                                <span>Sabujan Bikram Shah</span>
-                            </div>
-                            <div class="d-flex align-items-center">
-                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>01 Jan, 2024</span>
-                            </div>
-                        </div>
-                        <h4 class="text-uppercase mb-3">Rebum diam clita lorem erat magna est erat</h4>
-                        <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="bg-light">
-                    <img class="img-fluid" src="img/blog-3.jpg" alt="">
+                    <img class="img-fluid" src="img/blog/blog-1.webp" alt="">
                     <div class="p-4">
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
@@ -343,7 +383,7 @@
     <div
       class="footer container-fluid position-relative bg-dark text-white-50 py-6 px-5"
     >
-      <div class="row g-5">
+      <div class="row g-5 ml-auto">
         <div class="col-lg-6 pe-lg-5">
           <a href="index.html" class="navbar-brand">
             <h1 class="m-0 display-4">
