--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
     <div class="container-fluid bg-yellow py-6 px-5">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
         <h1 class="display-5 text-uppercase mb-4">
-          What Our <span class="text-primary">Happy Cleints</span> Say!!!
+          What Our <span class="text-primary">Happy Clients</span> Say!!!
         </h1>
       </div>
       <div class="row gx-0 align-items-center">
@@ -698,7 +698,7 @@
       <div class="row g-5">
         <div class="col-lg-4 col-md-6">
           <div class="bg-yellow">
-            <img class="img-fluid" src="img/blog/blog-1.webp" style="min-height: 360px;" alt="" />
+            <img class="img-fluid" src="img/blog/blog-11.webp"  alt="" />
             <div class="p-4">
               <div class="d-flex justify-content-between mb-4">
                 <div class="d-flex align-items-center">
