--- a/service.html
+++ b/service.html
@@ -317,7 +317,7 @@
     <div class="container-fluid bg-light py-6 px-5">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
         <h1 class="display-5 text-uppercase mb-4">
-          What Our <span class="text-primary">Happy Cleints</span> Say!!!
+          What Our <span class="text-primary">Happy Clients</span> Say!!!
         </h1>
       </div>
       <div class="row gx-0 align-items-center">
