--- a/about.html
+++ b/about.html
@@ -124,6 +124,13 @@
             Why <span class="text-primary">Y.S. Builders?</span>
           </h1>
           <h2 class="text-uppercase mb-3 text-center">
+            Since
+            <span class="text-primary">
+              2066 B.S.</span
+            >
+          </h2>
+
+          <h2 class="text-uppercase mb-3 text-center">
             Select our construction firm for our unmatched
             <span class="text-primary">
               dedication to excellence, punctual project completion, and
@@ -131,6 +138,7 @@
             >
             customised to fulfil your every requirement.
           </h2>
+          
           <div class="row gx-5 py-2">
             <div class="col-sm-6 mb-2">
               <p class="fw-bold mb-2">
@@ -179,7 +187,7 @@
         <div class="col-lg-5 pb-5" style="min-height: 500px">
           <div class="position-relative h-100 ms-5">
             <img
-              class="position-absolute w-100 h-100 mt-3 ms-n5"
+              class="position-absolute about-img w-100 h-100 mt-3 ms-n5"
               src="img/home/carousel-4.webp"
               style="object-fit: cover"
             />
