--- a/blog.html
+++ b/blog.html
@@ -218,8 +218,8 @@
             </div>
           </div>
             <div class="col-lg-4 col-md-6">
-                <div class="bg-light">
-                    <img class="img-fluid" src="img/blog/blog-7.webp" alt="">
+                <div class="bg-yellow">
+                    <img class="img-fluid" src="img/blog/b-2.jpeg" alt="">
                     <div class="p-4">
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
@@ -227,17 +227,17 @@
                                 <span>Sabujan Bikram Shah</span>
                             </div>
                             <div class="d-flex align-items-center">
-                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>01 Jan, 2024</span>
+                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">Rebum diam clita lorem erat magna est erat</h4>
+                        <h4 class="text-uppercase mb-3">Nepali Style Designs</h4>
                         <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
-                <div class="bg-light">
-                    <img class="img-fluid" src="img/blog/blog-1.webp" alt="">
+                <div class="bg-yellow">
+                    <img class="img-fluid" src="img/blog/b-3.jpeg" alt="">
                     <div class="p-4">
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
@@ -245,17 +245,17 @@
                                 <span>Sabujan Bikram Shah</span>
                             </div>
                             <div class="d-flex align-items-center">
-                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>01 Jan, 2024</span>
+                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">Rebum diam clita lorem erat magna est erat</h4>
+                        <h4 class="text-uppercase mb-3">Nepali Style Designs</h4>
                         <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
-                <div class="bg-light">
-                    <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                <div class="bg-yellow">
+                    <img class="img-fluid" src="img/blog/b-1.webp" alt="">
                     <div class="p-4">
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
@@ -263,17 +263,17 @@
                                 <span>Sabujan Bikram Shah</span>
                             </div>
                             <div class="d-flex align-items-center">
-                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>01 Jan, 2024</span>
+                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">Rebum diam clita lorem erat magna est erat</h4>
+                        <h4 class="text-uppercase mb-3">Nepali Style Designs</h4>
                         <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
-                <div class="bg-light">
-                    <img class="img-fluid" src="img/blog-3.jpg" alt="">
+                <div class="bg-yellow">
+                    <img class="img-fluid" src="img/blog/b-5.webp" alt="">
                     <div class="p-4">
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
@@ -281,17 +281,17 @@
                                 <span>Sabujan Bikram Shah</span>
                             </div>
                             <div class="d-flex align-items-center">
-                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>01 Jan, 2024</span>
+                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">Rebum diam clita lorem erat magna est erat</h4>
+                        <h4 class="text-uppercase mb-3">Nepali Style Designs</h4>
                         <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
-                <div class="bg-light">
-                    <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                <div class="bg-yellow">
+                    <img class="img-fluid" src="img/blog/b-6.webp" alt="">
                     <div class="p-4">
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
@@ -299,17 +299,17 @@
                                 <span>Sabujan Bikram Shah</span>
                             </div>
                             <div class="d-flex align-items-center">
-                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>01 Jan, 2024</span>
+                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">Rebum diam clita lorem erat magna est erat</h4>
+                        <h4 class="text-uppercase mb-3">Nepali Style Designs</h4>
                         <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
-                <div class="bg-light">
-                    <img class="img-fluid" src="img/blog-2.jpg" alt="">
+                <div class="bg-yellow">
+                    <img class="img-fluid" src="img/blog/b-7.webp" alt="">
                     <div class="p-4">
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
@@ -317,10 +317,10 @@
                                 <span>Sabujan Bikram Shah</span>
                             </div>
                             <div class="d-flex align-items-center">
-                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>01 Jan, 2024</span>
+                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">Rebum diam clita lorem erat magna est erat</h4>
+                        <h4 class="text-uppercase mb-3">Nepali Style Designs</h4>
                         <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
