--- a/project.html
+++ b/project.html
@@ -181,7 +181,7 @@
               class="img-fluid w-100"
               src="img/project/project-19.jpg"
               alt=""
-              style="max-height: 440px"
+              style="max-height: 500px; max-height: 550px;"
             />
             <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
@@ -202,6 +202,7 @@
               class="img-fluid w-100"
               src="img/project/project-16.jpg"
               alt=""
+              style="max-height: 500px; max-height: 550px;"
             />
             <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
@@ -216,6 +217,240 @@
             </a>
           </div>
         </div>
+        <div class="col-lg-6 col-md-6 portfolio-item">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-20.jpg"
+              alt=""
+              style="max-height: 500px; max-height: 550px;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-20.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 portfolio-item">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-21.jpg"
+              alt=""
+              style="max-height: 500px; max-height: 550px;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-21.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="col-lg-6 col-md-6 portfolio-item">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-22.jpg"
+              alt=""
+              style="max-height: 500px; max-height: 550px;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-22.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 portfolio-item">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-23.jpg"
+              alt=""
+              style="max-height: 500px; max-height: 550px;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-23.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 portfolio-item">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-24.jpg"
+              alt=""
+              style="max-height: 500px; max-height: 550px;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-24.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 portfolio-item">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-25.jpg"
+              alt=""
+              style="max-height: 500px; max-height: 550px;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-25.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 portfolio-item">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-26.jpg"
+              alt=""
+              style="max-height: 500px; max-height: 550px;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-26.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 portfolio-item">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-27.jpg"
+              alt=""
+              style="max-height: 500px; max-height: 550px;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-26.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="col-xl-4  portfolio-item first">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-28.jpg"
+              alt=""
+              style="max-height: 680px;;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-28.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-xl-4  portfolio-item second">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-29.jpg"
+              alt=""
+              style="max-height: 680px;;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-29.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-xl-4 portfolio-item first">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-30.jpg"
+              alt=""
+              style="max-height: 680px;;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-30.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+
         <div class="col-lg-6 col-md-6 portfolio-item">
           <div class="position-relative portfolio-box">
             <img
@@ -296,6 +531,137 @@
             </a>
           </div>
         </div>
+
+        <div class="col-xl-4  portfolio-item first">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-31.jpg"
+              alt=""
+              style="max-height: 680px;;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-31.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-xl-4  portfolio-item second">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-32.jpg"
+              alt=""
+              style="max-height: 680px;;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-32.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-xl-4 portfolio-item first">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-34.jpg"
+              alt=""
+              style="max-height: 680px;;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-34.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="col-xl-4  portfolio-item first">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-35.jpg"
+              alt=""
+              style="max-height: 680px;;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-35.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-xl-4  portfolio-item second">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-36.jpg"
+              alt=""
+              style="max-height: 680px;;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-36.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-xl-4 portfolio-item first">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-37.jpg"
+              alt=""
+              style="max-height: 680px;;"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-37.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+
+
+
         <div class="col-lg-6 col-md-6 portfolio-item">
           <div class="position-relative portfolio-box">
             <img
