--- a/project.html
+++ b/project.html
@@ -1153,13 +1153,34 @@
           </div>
         </div>
         
-        <div class="col-xl-4  portfolio-item">
+        <div class="col-lg-6 col-md-6 portfolio-item">
+          <div class="position-relative portfolio-box">
+            <img
+              class="img-fluid w-100"
+              src="img/project/project-57.jpg"
+              alt=""
+              style="max-height: 600px"
+            />
+            <!-- <a class="portfolio-title shadow-sm" href="">
+                        <p class="h4 text-uppercase">Project Name</p>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
+                    </a> -->
+            <a
+              class="portfolio-btn"
+              href="img/project/project-14.jpg"
+              data-lightbox="portfolio"
+            >
+              <i class="bi bi-plus text-white"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 portfolio-item">
           <div class="position-relative portfolio-box">
             <img
               class="img-fluid w-100"
               src="img/project/project-14.jpg"
               alt=""
-              style="max-height: 440px"
+              style="max-height: 600px"
             />
             <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
