--- a/detail.html
+++ b/detail.html
@@ -172,7 +172,7 @@
                 <!-- Category End -->
 
                 <!-- Recent Post Start -->
-                <div class="mb-5">
+                <!-- <div class="mb-5">
                     <h3 class="text-uppercase mb-4">Recent Post</h3>
                     <div class="bg-light p-4">
                         <div class="d-flex mb-3">
@@ -206,7 +206,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- Recent Post End -->
 
                 <!-- Image Start -->
@@ -236,13 +236,13 @@
                 <!-- Tags End -->
 
                 <!-- Plain Text Start -->
-                <div>
+                <!-- <div>
                     <h3 class="text-uppercase mb-4">Plain Text</h3>
                     <div class="bg-light rounded text-center" style="padding: 30px;">
                         <p>Vero sea et accusam justo dolor accusam lorem consetetur, dolores sit amet sit dolor clita kasd justo, diam accusam no sea ut tempor magna takimata, amet sit et diam dolor ipsum amet diam</p>
                         <a href="" class="btn btn-primary py-2 px-4">Read More</a>
                     </div>
-                </div>
+                </div> -->
                 <!-- Plain Text End -->
             </div>
             <!-- Sidebar End -->
