--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           </div>
         </div>
         
-        <div class="col-lg-5 pb-5" style="min-height: 500px">
+        <div class="col-lg-5 pb-5" style="min-height: 360px; min-width: 410px;">
           <div class="position-relative h-100 ms-5">
             <img
               class="position-absolute about-img w-100 h-100 mt-3 ms-n5"
