--- a/about.html
+++ b/about.html
@@ -224,6 +224,8 @@
                 <h3>Ashoj 2028 - Kartik  2078</h3>
                 <h3 class="text-body">Founder</h3>
               </div>
+              <br/>
+              <br/>
             </div>
             
             <div class="col-md-12 text-center">
@@ -274,7 +276,7 @@
             <div class="position-relative">
               <img
                 class="img-fluid about-img w-100"
-                src="img/team-3.jpg"
+                src="img/testimonial/team-3.jpg"
                 alt=""
               />
             </div>
